# libfpta

./: .cirrus.yml  .travis.yml  CMakeLists.txt  NOTICE  README.md  TODO.md  appveyor.yml  circle.yml  erthink.cxx  erthink.h  erthink.h++  erthink_128.h  erthink_arch.h  erthink_bswap.h  erthink_byteorder.h  erthink_carryadd.h  erthink_casting.h  erthink_casting.h++  erthink_clz.h  erthink_clz.h++  erthink_constexpr_cstr.h++  erthink_d2a.h  erthink_d2a.h++  erthink_defs.h  erthink_dynamic_constexpr.h  erthink_dynamic_constexpr.h++  erthink_endian.h  erthink_ifunc.h  erthink_intrin.h  erthink_misc.h  erthink_mul.h  erthink_optimize4size.h  erthink_optimize4speed.h  erthink_rot.h  erthink_short_alloc.h  erthink_short_alloc.h++  erthink_u2a.h  erthink_u2a.h++  erthink_unaligned.h++
.circleci/: config.yml
.github/workflows/: MinGW.yml  ci.yml  coverity.yml
cmake/: compiler.cmake  profile.cmake  testing.cmake  utils.cmake
cmake.fpta/: compiler.cmake  testing.cmake  utils.cmake
cmake.fptu/: compiler.cmake  testing.cmake
fast_positive/: config.h.in  defs.h  schema.h  tables.h  tables_internal.h  tuples.h  tuples_internal.h
src/: CMakeLists.txt  bitset4tags.h  check.cxx  common.cxx  compare.cxx  composite.cxx  create.cxx  cursor.cxx  data.cxx  dbi.cxx  details.h  filter.cxx  get.cxx  gperf_ECMAScript_keywords.h  index.cxx  inplace.cxx  iterator.cxx  json_emit.cxx  json_parse.cxx  misc.cxx  osal.h  remove.cxx  schema.cxx  sort.cxx  table.cxx  time.cxx  version.cxx.in
src/erthink/: .travis.yml  CMakeLists.txt  LICENSE  erthink.cxx  erthink.h  erthink_arch.h  erthink_bswap.h  erthink_byteorder.h  erthink_carryadd.h  erthink_casting.h  erthink_clz.h  erthink_d2a.h  erthink_defs.h  erthink_dynamic_constexpr.h  erthink_endian.h  erthink_ifunc.h  erthink_mul.h  erthink_optimize4speed.h  erthink_short_alloc.h  erthink_u2a.h
src/erthink/.circleci/: config.yml
src/erthink/cmake/: compiler.cmake
src/erthink/test/: CMakeLists.txt  d2a.cxx  ops.cxx  testing.h  u2a.cxx
src/schema/: CMakeLists.txt  ast.cxx  ast.h  backend.cxx  bomstrip.cxx  filesystem.h  frontend.cxx  grammar.lemon  interfaces.h  lexer.re2c  main.cxx  sourcer.cxx  test.pts
test/: 0corny.cxx  0trivia.cxx  128.cxx  1create.cxx  1open.cxx  2schema.cxx  2upsert.cxx  3iterate.cxx  3smoke.cxx  4data.cxx  4fetch.cxx  5key.cxx  5remove.cxx  6index_primary.cxx  6index_secondary.cxx  6shrink.cxx  7compare.cxx  7cursor_primary.cxx  7cursor_secondary_unique.cxx  7cursor_secondary_withdups.cxx  8composite.cxx  8crud.cxx  8emit2json.cxx  8select.cxx  8thread.cxx  9composite.cxx  9crud.cxx  9thread.cxx  CMakeLists.txt  autogen_u128_basic.h++  c_mode.c  cursor_secondary.hpp  d2a.cxx  fpta_test.h  fptu_test.h  keygen.cxx  keygen.hpp  ops.cxx  short_alloc.cxx  testing.h  (+4 more)
